# simplecron

./: .coverage  .gitignore  AGENTS.md  README.md  pyproject.toml  pytest-report.json
.github/instructions/: project-instructions.md
.github/workflows/: frontends.yml  testing.yml
.github/workflows copy/: frontends.yml  shop.yml
simplecron/: _old.py  _refactoring.py  background.py  base.py  context.py  exceptions.py  operators.py  runners.py  typings.py  utils.py
tests/: test_job.py  test_scheduler.py  test_structure.py  test_units.py  test_utils.py
tests/playground/: base.py  every_minutes.py  every_runners.py  every_seconds.py  every_thirty.py  running_scheduler.py
