[project]
name = "simplecron"
version = "0.1.0.dev2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
keywords = [
    "cron",
    "scheduler"
]
authors = [
  {name = "John Pendenque", email = "pendenquejohn@gmail.com"},
]
maintainers = [
  {name = "John Pendenque", email = "pendenquejohn@gmail.com"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Natural Language :: English",
  "Operating System :: Microsoft :: Windows :: Windows 11",
  "Operating System :: MacOS"
]

dependencies = [
    "asgiref>=3.11.1",
    "pydantic>=2.13.4",
    "pytz>=2026.2",
    "redis>=8.0.1",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-aio>=2.1.7",
    "pytest-cov>=7.1.0",
    "pytest-crayons>=0.0.9",
    "pytest-datafiles>=3.0.1",
    "pytest-env>=1.6.0",
    "pytest-reportlog>=1.0.0",
    "ruff>=0.15.20",
]
