[project]
name = "simplecron"
version = "0.1.0.dev3"
description = "Simplecron is a simple and lightweight Python library for scheduling tasks using cron-like syntax."
readme = "README.md"
requires-python = ">=3.14"
keywords = [
    "cron",
    "scheduler"
]
authors = [
  {name = "John Pendenque", email = "pendenquejohn@gmail.com"},
  {name = "Daniel Bader", email = "mail@dbader.org"}
]
maintainers = [
  {name = "John Pendenque", email = "pendenquejohn@gmail.com"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Natural Language :: English",
  "Operating System :: Microsoft :: Windows :: Windows 11",
  "Operating System :: MacOS"
]

dependencies = [
    "asgiref>=3.11.1",
    "pydantic>=2.13.4",
    "pytz>=2026.2",
    "redis>=8.0.1",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-aio>=2.1.7",
    "pytest-cov>=7.1.0",
    "pytest-crayons>=0.0.9",
    "pytest-datafiles>=3.0.1",
    "pytest-env>=1.6.0",
    "pytest-reportlog>=1.0.0",
    "ruff>=0.15.20",
    "schedule>=1.2.2",
]

[project.urls]
Homepage = "https://github.com/Zadigo/simplecron"
Documentation = "https://github.com/Zadigo/simplecron/wiki"
Repository = "https://github.com/Zadigo/simplecron.git"
Changelog = "https://github.com/Zadigo/simplecron/blob/main/CHANGELOG.md"

[tool.pyright]
typeCheckingMode = "off"
reportMissingImports = true
reportUntypedBaseClass = true

[tool.pytest]
# timeout=5000
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "api: marks tests as api tests",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.pytest.ini_options]

[tool.pytest_env]
env_files = [".env", ".env.test"]


[tool.autopep8]
max_line_length = 120
# ignore = "E501,W6"  # or ["E501", "W6"]
in-place = true
recursive = true
aggressive = 3

[tool.setuptools]
packages = ["simplecron"]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
